fix resopnsiveness related bugs on small devices and improve upon rendering when links on navbar are clicked

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,15 @@
   width: 100%;
   height: 100%;
 }
+
+.container, .container-fluid {
+  padding-top:  60px;
+}
+
+.carousel{
+  padding-top: 40px;
+}
+
+.car-text{
+  height: 20%;
+}
